[UPD] Minor changes

--- a/Wikipedia_test.ipynb
+++ b/Wikipedia_test.ipynb
@@ -12,6 +12,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Table of contents\n",
+    "1. [Find articles](#parse)\n",
+    "2. [Rank articles according to November pageviews](#rank)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -27,6 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1. Find articles <a name=\"parse\"></a>\n",
     "The fist goal to achive is to find all the Italian and Portuguese Wikipedia articles that mention `Matteo Renzi`. In order to do so,I implemented a [parser](wiki_parser.py) which goes through the raw data and then keeps and stores the `title` and the `text` of the elements of the corpora that mention the [Italian (almost) ex Prime Minister](http://gph.is/29zqwgy)."
    ]
   },
@@ -47,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Have a quick peek at a snippet of the `xml`. The elements we are interested on are under the child `page`, which identifies an article. Then we want to get the contents of `title` and `text`."
+    "Have a quick peek at a snippet of the `xml`. The elements we are interested in are under the child `page`, which identifies an article. Then we want to get the contents of `title` and `text`."
    ]
   },
   {
@@ -134,6 +144,34 @@
     "# Parse portuguese corpus\n",
     "parse_articles('port', path + xml_files[1])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The articles are filtered according to the presence of the mention to Matteo Renzi, those in Italian have been stored in a [`.json` file](Corpus/wiki_ita_matteo_renzi.json) whose each line corresponds to a page (`title`, `text`). The same holds for the [articles](Corpus/wiki_port_matteo_renzi.json) in Portuguese. The two corpora are stored in the folder [`Corpus`](https://github.com/CriMenghini/Wikipedia/tree/master/Corpus).\n",
+    "\n",
+    "                                      {\"title\": \"title_1\", \"text\": \"text_1\"}\n",
+    "                                                        ...\n",
+    "                                                        ...\n",
+    "                                      {\"title\": \"title_n\", \"text\": \"text_n\"}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rank articles according to November pageviews <a name=\"parse\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
