[ADD] Nbviewer link.

--- a/Mention/Mention_draft.ipynb
+++ b/Mention/Mention_draft.ipynb
@@ -6,7 +6,9 @@
     "collapsed": true
    },
    "source": [
-    "## Matteo Renzi mentions across Italian and Portuguese Wikipedia"
+    "## Matteo Renzi mentions across Italian and Portuguese Wikipedia\n",
+    "\n",
+    "__*Remark:*__ Since interactive plots are present open [this](http://nbviewer.jupyter.org/github/CriMenghini/Wikipedia/blob/master/Mention/Mention_draft.ipynb) link to read the `Notebook` correctly."
    ]
   },
   {
