[TYPOS] Spellchecker. @TODO: finish to wrap function. Write conclusions.

--- a/Mention/Mention_draft.ipynb
+++ b/Mention/Mention_draft.ipynb
@@ -57,9 +57,9 @@
    "metadata": {},
    "source": [
     "### 1. Find articles <a name=\"parse\"></a>\n",
-    "The fist goal to achive is to find all the Italian and Portuguese Wikipedia articles that mention `Matteo Renzi`. In order to do so, we use the [WikiHandler](wiki_parser.py) class which goes through the raw data and then keeps and stores the `title` and the `text` of the elements of the corpora that mention the [Italian (almost) ex Prime Minister](http://gph.is/29zqwgy).\n",
+    "The fist goal to achieve is to find all the Italian and Portuguese Wikipedia articles that mention `Matteo Renzi`. In order to do so, we use the [WikiHandler](wiki_parser.py) class which goes through the raw data and then keeps and stores the `title` and the `text` of the elements of the corpora that mention the [Italian (almost) ex-Prime Minister](http://gph.is/29zqwgy).\n",
     "\n",
-    "In this example we focus on the sets of articles written in Italian and in Portugal, they are collected respectively until 20th November 2016 and 1st December 2016. In general, the code allows you to take into account more than two languages. In the [`README`](https://github.com/CriMenghini/Wikipedia/tree/master/Mention) file you can find the information related to the collection of data."
+    "In this example we focus on the sets of articles written in Italian and in Portugal, they are collected respectively until 20th November 2016 and 1st December 2016. In general, the code allows you to take into account more than two languages. In the [`README`](https://github.com/CriMenghini/Wikipedia/tree/master/Mention) file, you can find the information related to the collection of data."
    ]
   },
   {
@@ -81,16 +81,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After having a quick peek at a snippet of the `xml`. The elements we are interested in are under the child `page`, which identifies an article. Then we want to get the contents of `title` and `text`."
+    "After having a quick peek at a snippet of the `XML`. The elements we are interested in are on the child `page`, which identifies an article. Then we want to get the contents of `title` and `text`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Due to the big size of the `xml` we opted for a parser which registers callbacks for events of interest and then let the parser proceed through the document. The text of the article has not been preprocessed since for the purpose of our analysis we are not going to analyze the text in itself.\n",
+    "Due to the big size of the `XML` we opted for a parser which registers callbacks for events of interest and then let the parser proceed through the document. The text of the article has not been preprocessed since for the purpose of our analysis we are not going to analyze the text in itself.\n",
     "\n",
-    "Hence, we proceed parsing the Italian corpus using the `parse_articles` function stored in [`wiki_parser`](wiki_parser.py) library - it basically activates the parser."
+    "Hence, we proceed to parse the Italian corpus using the `parse_articles` function stored in the [`wiki_parser`](wiki_parser.py) library - it basically activates the parser."
    ]
   },
   {
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The articles are filtered according to the presence of the mention to Matteo Renzi, those in Italian have been stored in a [`.json`](Corpus/wiki_ita_matteo_renzi.json) file whose each line corresponds to a page (`title`, `text`). The same holds for the [articles](Corpus/wiki_port_matteo_renzi.json) in Portuguese. The two corpora are authomatically stored in the folder [`Corpus`](https://github.com/CriMenghini/Wikipedia/tree/master/Corpus).\n",
+    "The articles are filtered according to the presence of the mention to Matteo Renzi, those in Italian have been stored in a [`.json`](Corpus/wiki_ita_matteo_renzi.json) file whose each line corresponds to a page (`title`, `text`). The same holds for the [articles](Corpus/wiki_port_matteo_renzi.json) in Portuguese. The two corpora are automatically stored in the folder [`Corpus`](https://github.com/CriMenghini/Wikipedia/tree/master/Corpus).\n",
     "\n",
     "                                  {\"title\": \"title_1\", \"text\": \"text_1\"}\n",
     "                                                        ...\n",
@@ -239,7 +239,7 @@
     "collapsed": true
    },
    "source": [
-    "Thus, we extract the number of monthly pageviews for each article related to the languages of interest (i.e. `it` and `pt`) from the *pageviews* file - [Additional data](https://github.com/CriMenghini/Wikipedia/tree/master/Mention) in the `README`. To filter the file we use the [`filter_pageviews_file`](pageviews.py) function and get a dictionary of dictionaries with the following structure (according to our example):\n",
+    "Thus, we extract the number of monthly page views for each article related to the languages of interest (i.e. `it` and `pt`) from the *page views* file - [Additional data](https://github.com/CriMenghini/Wikipedia/tree/master/Mention) in the `README`. To filter the file we use the [`filter_pageviews_file`](pageviews.py) function and get a dictionary of dictionaries with the following structure (according to our example):\n",
     "\n",
     "                                {'it':{'Title_1':'No pageviews',\n",
     "                                               ...\n",
@@ -257,10 +257,10 @@
    },
    "outputs": [],
    "source": [
-    "# Pageviews file\n",
+    "# Page views file\n",
     "pageviews_file = 'pagecounts-2016-11-views-ge-5-totals'\n",
     "\n",
-    "# Filter the pageview file\n",
+    "# Filter the page view file\n",
     "articles_pageviews = filter_pageviews_file(path + pageviews_file, ['pt','it'])"
    ]
   },
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus, a right-join between the `DataFrames`, namely the one obtained from the pageviews and the other obtained from from the corpus, is performed. It results that both for the Italian and Portuguese articles there aare articles that mention Matteo Renzi that have not been visualized in November. The `define_ranked_df` function is stored in the [`pageviews`](pageviews.py) library."
+    "Thus, a right join between the `DataFrames`, namely the one obtained from the pageviews and the other obtained from the corpus, is performed. It results that both for the Italian and Portuguese articles there are articles that mention Matteo Renzi that have not been visualized in November. The `define_ranked_df` function is stored in the [`pageviews`](pageviews.py) library."
    ]
   },
   {
@@ -372,7 +372,7 @@
     }
    ],
    "source": [
-    "# Define the italian ranked article df according to the number of pageviews\n",
+    "# Define the italian ranked article df according to the number of page views\n",
     "ranked_df_ita = define_ranked_df(articles_pageviews, 'it', df_it_titles)\n",
     "# Show the df head\n",
     "ranked_df_ita.head(10)"
@@ -479,9 +479,9 @@
     }
    ],
    "source": [
-    "# Define the italian ranked article df according to the number of pageviews\n",
+    "# Define the italian ranked article df according to the number of page views\n",
     "ranked_df_port = define_ranked_df(articles_pageviews, 'pt', df_pt_titles)\n",
-    "#Show the df\n",
+    "# Show the df\n",
     "ranked_df_port.head(10)"
    ]
   },
@@ -490,9 +490,9 @@
    "metadata": {},
    "source": [
     "Having a quick glance at the two top 10, we notice:\n",
-    "* The number of pageviews for the Italian articles which mention Matteo Renzi is considerably higher than for those that are written in Portuguese.\n",
+    "* The number of page views for the Italian articles which mention Matteo Renzi is considerably higher than for those that are written in Portuguese.\n",
     "* The only article that is present in both the top ranking is `Partito Democratico (Italia)`. \n",
-    "* It seems that the pages differ in the content: the Portugueses are more related to topics that reguard the international politics rather the Italians that refer to politics, journalists and public figures."
+    "* It seems that the pages differ in the content: the Portuguese ones are more related to topics that regard the international politics rather the Italians that refer to politics, journalists and public figures."
    ]
   },
   {
@@ -502,9 +502,9 @@
     "### 3. Make comparisons <a name = 'comp'></a>\n",
     "\n",
     "We now move ahead exploring the data that we preprocessed and trying to figure out something interesting.\n",
-    "* We take a look at the number of mentions received in each article. In this contest it may be possible that Matteo Renzi received more than one mention just because of the precence of references. For instance in [this](https://it.wikipedia.org/wiki/Francesco_Guccini) page, if you look up for Matteo Renzi, you will find 2 mentions but one of those just refers to the first. For the moment we do not address this issue.\n",
+    "* We take a look at the number of mentions received in each article. In this contest, it may be possible that Matteo Renzi received more than one mention just because of the presence of references. For instance on [this](https://it.wikipedia.org/wiki/Francesco_Guccini) page, if you look up for Matteo Renzi, you will find 2 mentions but one of those just refers to the first. For the moment we do not address this issue.\n",
     "\n",
-    "The `DataFrame` below- obtained using `article_mentions` function in [this](across_languages.py) library- shows the number of mentions that Matteo Renzi has received in each article according both for the Italian and Portuguese corpora. The `DataFrames` are sorted by the number of mentions so that we get the pages where Matteo Renzi is more \"popular\"."
+    "The `DataFrame` below- obtained using `article_mentions` function in [this](across_languages.py) library- shows the number of mentions that Matteo Renzi has received in each article according to both for the Italian and Portuguese corpora. The `DataFrames` are sorted by the number of mentions so that we get the pages where Matteo Renzi is more \"popular\"."
    ]
   },
   {
@@ -661,7 +661,7 @@
     "collapsed": false
    },
    "source": [
-    "Comparing the two `DataFrames` we immediatly notice that, even if the maximum number of mentions that Matteo Renzi received for Italian and Portuguese articles are very different. In the Potuguese corpus there are only two artiles that have more than 5 mentions. Thus, can be interesting to visualize the distribution of the mentions both for the IT and PT corpora."
+    "Comparing the two `DataFrames` we immediately notice that even if the maximum number of mentions that Matteo Renzi received for Italian and Portuguese articles are very different. In the Portuguese corpus there are only two articles that have more than 5 mentions. Thus, can be interesting to visualize the distribution of the mentions both for the IT and PT corpora."
    ]
   },
   {
@@ -702,9 +702,9 @@
    "metadata": {},
    "source": [
     "In this direction, one aspect that can be considered is the following: \n",
-    "> Define how important is Matteo Renzi in the articles that mention him. It requires to define the concept of *importance*. Intuitively, we would say that higher is the number of mentions more is the importance of our object in the article. Moreover, it may be useful to weight the number of mentions according to the number of words in the article. \n",
+    "> Define how important is Matteo Renzi in the articles that mention him. It requires defining the concept of *importance*. Intuitively, we would say that higher is the number of mentions more is the importance of our object in the article. Moreover, it may be useful to weight the number of mentions according to the number of words in the article. \n",
     "$$I_{string} = \\frac{M}{|D|}$$\n",
-    "Where *I* is the importance, *M* is the number of mentions and *D* the number of words in the document. In this way whether an article cited Renzi once but it is made up by just few lines, the string of interest will result more significant."
+    "Where *I* is the importance, *M* is the number of mentions and *D* the number of words in the document. In this way, whether an article cited Renzi once but it is made up just by a few lines, the string of interest will result more significant."
    ]
   },
   {
@@ -915,16 +915,16 @@
    "metadata": {},
    "source": [
     "About these two features, we can think that another way to explore should be the following:\n",
-    "> Consider how the number of pageviews of an article changes when the number of Matteo Renzi citations increases from a revision to another. In particular the *importance*(I) is re-defined as: \n",
+    "> Consider how the number of pageviews of an article changes when the number of Matteo Renzi citations increases from a revision to another. In particular, the *importance*(I) is re-defined as: \n",
     "$$I = \\sum_{t = 1}^{T} \\frac{(p_t-p_{t-1}) \\times m_t}{|D_t|}$$\n",
-    "Where *t* is the time of sequencial revision of the article, *p* is the number of pageviews at time and m is the number of mentions."
+    "Where *t* is the time of sequential revision of the article, *p* is the number of page views at time and m is the number of mentions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus we proceed looking for the presence of same articles (in different languages) that mention Matteo Renzi. To do so we make a request for each Portugues *Wikipedia* page (that cites Renzi), than we parse the `html` source to exctract - whethere available- the title of the IT article related to that the request has been sent. The function `get_matches` is stored in [this](across_languages) library. "
+    "Thus we proceed to look for the presence of same articles (in different languages) that mention Matteo Renzi. To do so we make a request for each Portugues *Wikipedia* page (that cites Renzi) than we parse the `HTML` source to extract - where available- the title of the IT article related to that the request has been sent. Precisely, the requests are sent for each title of the language that has less article that match Matteo Renzi. The function `get_matches` is stored in [this](across_languages) library. "
    ]
   },
   {
@@ -935,15 +935,15 @@
    },
    "outputs": [],
    "source": [
-    "# Implement get_matches - code into across languages\n",
-    "# dict_italian = get_matches()"
+    "# Built the common articles matches\n",
+    "dict_italian = get_matches(df_pt_titles)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Proceed creating a df that contains the information related to those articles."
+    "Proceed to create a `DataFrame` that contains the information related to those articles."
    ]
   },
   {
@@ -966,7 +966,8 @@
    },
    "outputs": [],
    "source": [
-    "ita = df_it_mension_pageview.query('Title in @italian_titles')"
+    "ita = df_it_mension_pageview.query('Title in @italian_titles') # df_it_titles\n",
+    "# Add a column with the tuple"
    ]
   },
   {
