[UPD] Chenke nbviewer link

--- a/Mention/Mention_example.ipynb
+++ b/Mention/Mention_example.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "## Matteo Renzi mentions across Italian and Portuguese Wikipedia\n",
     "\n",
-    "__*Remark:*__ Since interactive plots are present open [this](http://nbviewer.jupyter.org/github/CriMenghini/Wikipedia/blob/master/Mention/Mention_draft.ipynb) link to read the `Notebook` correctly."
+    "__*Remark:*__ Since interactive plots are present open [this](https://nbviewer.jupyter.org/github/CriMenghini/Wikipedia/blob/master/Mention/Mention_example.ipynb) link to read the `Notebook` correctly."
    ]
   },
   {
